--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
 		</p>
 		<p>Check out the developer on <a href="https://www.facebook.com/KSRthunder">Facebook</a></p>
 	-->
-		<div id="game">
-			<img src="images/back.png" alt="Queen of Diamonds">
-			<img src="images/back.png" alt="Queen of Hearts">
-			<img src="images/back.png" alt="King of Diamonds">
-			<img src="images/back.png" alt="King of Hearts">
-		</div>
+		<div id="game-board" class="board clearfix"></div>
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">
